# spectron

./: .gitignore  Cargo.toml  requirements.md
crates/spectron-analysis/: Cargo.toml
crates/spectron-analysis/src/: entrypoints.rs  lib.rs  metrics.rs  security.rs  structural.rs  types.rs
crates/spectron-app/: Cargo.toml
crates/spectron-app/src/: main.rs
crates/spectron-core/: Cargo.toml
crates/spectron-core/src/: analysis.rs  error.rs  graph.rs  id.rs  lib.rs  metrics.rs  project.rs  security.rs  symbol.rs  traits.rs
crates/spectron-graph/: Cargo.toml
crates/spectron-graph/src/: algorithms.rs  builder.rs  cfg.rs  lib.rs
crates/spectron-loader/: Cargo.toml
crates/spectron-loader/src/: crates.rs  files.rs  lib.rs  manifest.rs  modules.rs
crates/spectron-loader/tests/: integration_tests.rs
crates/spectron-loader/tests/fixtures/malformed/bad_toml/: Cargo.toml
crates/spectron-loader/tests/fixtures/malformed/empty_src/: Cargo.toml
crates/spectron-loader/tests/fixtures/malformed/missing_member/: Cargo.toml
crates/spectron-loader/tests/fixtures/malformed/missing_member/crates/exists/: Cargo.toml
crates/spectron-loader/tests/fixtures/malformed/missing_member/crates/exists/src/: lib.rs
crates/spectron-loader/tests/fixtures/malformed/missing_module/: Cargo.toml
crates/spectron-loader/tests/fixtures/malformed/missing_module/src/: lib.rs
crates/spectron-loader/tests/fixtures/malformed/no_package/: Cargo.toml
crates/spectron-loader/tests/fixtures/single_crate/: Cargo.toml
crates/spectron-loader/tests/fixtures/single_crate/src/: lib.rs  models.rs  utils.rs
crates/spectron-loader/tests/fixtures/single_crate_both/: Cargo.toml
crates/spectron-loader/tests/fixtures/single_crate_both/src/: lib.rs  main.rs  shared.rs
crates/spectron-loader/tests/fixtures/workspace/crates/alpha/src/: lib.rs
crates/spectron-loader/tests/fixtures/workspace/crates/beta/: Cargo.toml
crates/spectron-parser/: Cargo.toml
crates/spectron-parser/src/: lib.rs  resolve.rs  visitor.rs
crates/spectron-parser/tests/: integration_tests.rs
crates/spectron-parser/tests/fixtures/with_parse_error/: Cargo.toml
crates/spectron-parser/tests/fixtures/with_parse_error/src/: bad.rs  good.rs  lib.rs
crates/spectron-render/: Cargo.toml
crates/spectron-render/src/: lib.rs
crates/spectron-storage/: Cargo.toml
crates/spectron-storage/src/: lib.rs
crates/spectron-ui/: Cargo.toml
crates/spectron-ui/src/: filter_panel.rs  graph_view.rs  inspector.rs  layout.rs  lib.rs  lib.rs.bak
specs/: 00-system-overview.md  01-foundation-core-graph.md  02-findings-system.md  03-security-taint-engine.md  04-auth-trust-boundary.md  05-performance-cost-analyzer.md  06-structural-architecture.md  07-resource-lifetime.md  08-interprocedural-summaries.md  09-ranking-prioritization.md  10-rule-engine.md  11-ui-views.md  12-diff-ci-integration.md
