[package]
name = "spectron-app"
version = "0.1.0"
edition = "2021"

[dependencies]
spectron-core = { workspace = true }
spectron-loader = { workspace = true }
spectron-parser = { workspace = true }
spectron-graph = { workspace = true }
spectron-analysis = { workspace = true }
spectron-storage = { workspace = true }
spectron-render = { workspace = true }
spectron-ui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
