[package]
name = "spectron-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
spectron-core = { workspace = true }
spectron-parser = { workspace = true }
spectron-loader = { workspace = true }
petgraph = { workspace = true }
syn = { workspace = true }
quote = "1"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
spectron-core = { workspace = true }
petgraph = { workspace = true }
