[package]
name = "spectron-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
spectron-core = { workspace = true }
cargo_toml = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
